spacing issues

--- a/css/format.css
+++ b/css/format.css
@@ -38,7 +38,7 @@
   display: block;
   float: left;
   width : 35em;
-  height : 68em;
+  height : 60em;
   padding: 0px 5px 0px 5px;
 }
 
